--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -11,10 +11,10 @@ $redorange: #f54c73;
 $yellow: #ffe058;
 $red: #e03325;
 $blue_gray: #3c6382;
-$body: #f4f6fa;
+$body: #E8ECF1;
 
 
-%boxShadowContent{
+%boxShadowContent {
   -webkit-box-shadow: 0px 0px 6px 0px rgba(33, 44, 52, 0.05);
   -moz-box-shadow: 0px 0px 6px 0px rgba(33, 44, 52, 0.05);
   box-shadow: 0px 0px 6px 0px rgba(33, 44, 52, 0.05);
