--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -1,14 +1,12 @@
 @import './variables';
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&display=swap');
 
 body {
-  font-family: 'interstate', 'Source Sans Pro', Helvetica, sans-serif !important;
+  font-family: 'Nunito', Helvetica, sans-serif !important;
   background-color: $body !important;
 }
 
-p {
-  
-}
+
 p,
 li,
 abbr {
