--- a/client/src/layouts/Menus/Menus.module.scss
+++ b/client/src/layouts/Menus/Menus.module.scss
@@ -1,6 +1,9 @@
+@import '../../styles/variables';
+
 .Menus {
-  .Heading {
-    padding: 20px 0;
+  header {
+    padding: 40px;
+
     .btnClose {
       padding: 0;
       font-size: 30px;
@@ -15,6 +18,27 @@
     align-content: center;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 60vh;
+
+    ul {
+      li {
+        text-align: center;
+
+        a {
+          color: #fff;
+          font-weight: 700;
+          font-size: 2rem;
+          text-transform: uppercase;
+
+          &:hover {
+            color: $blue;
+          }
+        }
+      }
+    }
+  }
+
+  footer {
+    padding: 40px;
   }
 }
