--- a/client/src/layouts/Menus/Menus.module.scss
+++ b/client/src/layouts/Menus/Menus.module.scss
@@ -6,10 +6,23 @@
 
     .btnClose {
       padding: 0;
-      font-size: 30px;
       line-height: 0;
       background-color: transparent;
       border: none;
+      transition: all .1s ease-in-out;
+      :global {
+          .bx {
+            color: #fff;
+            font-size: 60px;
+            transform: rotate(0);
+            cursor: pointer;
+            transition: all .3s ease-in;
+            &:hover {
+              color: $red;
+              transform: rotate(90deg);
+            }
+          }
+        }
     }
   }
 
@@ -26,12 +39,28 @@
 
         a {
           color: #fff;
-          font-weight: 700;
+          font-weight: 500;
           font-size: 2rem;
           text-transform: uppercase;
 
           &:hover {
             color: $blue;
+          }
+        }
+
+        p {
+          color: rgba(225, 225, 225, 0.5)
+        }
+
+        :global {
+          .bx {
+            color: #fff;
+            font-size: 30px;
+            cursor: pointer;
+            transition: all .3s ease-in;
+            &:hover {
+              color: $red;
+            }
           }
         }
       }
@@ -40,5 +69,31 @@
 
   footer {
     padding: 40px;
+    p {
+      color: rgba(225, 225, 225, 0.2)
+    }
+
+    .BoxContact {
+      h5 {
+        color: #fff;
+      }
+     
+      a {
+        color: rgba(225, 225, 225, 0.7)
+      }
+
+    }
+
+    ul {
+      li {
+        :global {
+          .bx {
+            color: #fff;
+            font-size: 24px;
+          }
+        }
+      }
+    }
   }
+
 }
