--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -1,8 +1,7 @@
 @import './variables';
-@import url('https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900&display=swap');
 body {
-  font-family: 'Nunito', Helvetica, sans-serif !important;
+  font-family: 'Work Sans', sans-serif !important;
   background-color: $body !important;
 }
 
