--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -8,9 +8,9 @@ $gray_medium: #a3a9af;
 $gray_dark: #57606f;
 $fuchsia: #8e3389;
 $redorange: #f54c73;
-$yellow: #ffe058;
+$yellow: #fed217;
 $red: #e03325;
-$blue_gray: #3c6382;
+$blue_gray: #2e516d;
 $body: #E8ECF1;
 
 
