--- a/client/src/layouts/Layout.module.scss
+++ b/client/src/layouts/Layout.module.scss
@@ -148,7 +148,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-end;
-      justify-content: end;
+      justify-content: flex-end;
       height: 100%;
     }
     ul {
