--- a/client/src/layouts/Layout.module.scss
+++ b/client/src/layouts/Layout.module.scss
@@ -1,6 +1,8 @@
 @import '../styles/variables';
 
 .Layout {
+
+
   .Overlay {
     position: absolute;
     top: 0;
@@ -16,12 +18,22 @@
   .onOverlay {
     transform: scale(1);
     opacity: 1;
-
   }
 
   .offOverlay {
+    z-index: -9999;
     transform: scale(0.5);
     opacity: 0;
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    height: 80vh;
   }
 }
 
