--- a/client/src/layouts/Layout.module.scss
+++ b/client/src/layouts/Layout.module.scss
@@ -109,7 +109,7 @@
         }
 
         p {
-          color: rgba(225, 225, 225, 0.5)
+          color: #BFBFBF;
         }
 
         :global {
@@ -132,7 +132,7 @@
     padding: 40px;
 
     p {
-      color: rgba(225, 225, 225, 0.2)
+      color: #BFBFBF;
     }
 
     .BottomLeft {
@@ -141,7 +141,7 @@
       }
 
       a {
-        color: rgba(225, 225, 225, 0.7)
+        color: #BFBFBF;
       }
 
       ul {
