--- a/client/src/layouts/Layout.module.scss
+++ b/client/src/layouts/Layout.module.scss
@@ -144,6 +144,7 @@
 
       ul {
         margin-top: 8px;
+
         li {
           :global {
             .bx {
@@ -154,6 +155,7 @@
         }
       }
     }
+
     .BottomRight {
       display: flex;
       flex-direction: column;
@@ -161,6 +163,7 @@
       justify-content: flex-end;
       height: 100%;
     }
+
     ul {
       li {
         a {
@@ -170,4 +173,15 @@
     }
   }
 
+}
+
+:global {
+  .skylight-overlay {
+    background-color: transparent !important;
+  }
+
+  .skylight-dialog {
+    border-radius: 6px !important;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1) !important;
+  }
 }
