--- a/client/src/layouts/Layout.module.scss
+++ b/client/src/layouts/Layout.module.scss
@@ -181,6 +181,7 @@
   }
 
   .skylight-dialog {
+    padding: 15px 30px !important;
     border-radius: 6px !important;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1) !important;
   }
