--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -17,3 +17,26 @@ $col_yellow: #FED217;
 $col_blue: #162E68;
 $col_red: #CF1327;
 
+:root {
+  --black: #20313f;
+  --green: #00ba7a;
+  --green_medium: #019658;
+  --blue: #2572dd;
+  --blue_medium: #134fa3;
+  --gray_1: #f3f4f5;
+  --gray_2: #f0f0f0;;
+  --gray_light: #ced6e0;
+  --gray_medium: #a3a9af;
+  --gray_dark: #57606f;
+  --fuchsia: #8e3389;
+  --redorange: #f54c73;
+  --yellow: #fed217;
+  --red: #e03325;
+  --blue_gray: #2e516d;
+  --body: #E8ECF1;
+
+  --col_yellow: #FED217;
+  --col_blue: #162E68;
+  --col_red: #CF1327;
+
+}
