Develop & Deco => Search Up/Down => part 2 Final

--- a/client/src/layouts/Layout.module.scss
+++ b/client/src/layouts/Layout.module.scss
@@ -34,13 +34,13 @@
     
   }
 
-  // .mainDown {
-  //   justify-content: center;
-  // }
+  .mainDown {
+    justify-content: center;
+  }
 
-  // .mainUp {
-  //   justify-content: start;
-  // }
+  .mainUp {
+    justify-content: start;
+  }
 }
 
 .Header {
