--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -7,7 +7,7 @@ $gray_light: #ced6e0;
 $gray_medium: #a3a9af;
 $gray_dark: #57606f;
 $fuchsia: #8e3389;
-$redorange: #f54c73;
+$redorange: #161314;
 $yellow: #fed217;
 $red: #e03325;
 $blue_gray: #2e516d;
