--- a/client/src/layouts/Layout.module.scss
+++ b/client/src/layouts/Layout.module.scss
@@ -183,22 +183,31 @@
 
 }
 
-.Filters {
-  padding: 10px 0 20px;
-  width: 100%;
-  margin: 20px 0 0;
-  border-bottom: 1px solid $gray_light;
-  transition: all 0.5s ease-in;
-  button {
-    background-color: $gray_light;
-    line-height: 2;
-    border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    margin: 0 10px;
-    &:hover {
-      color: #fff;
-      background-color: $gray_dark;
+
+.OnFilters {
+  animation: play 0.2s forwards;
+  @keyframes play {
+    from { 
+      height: 0;
+      opacity: 0; 
+    }
+    to { 
+      height: 100px;
+      opacity: 1; 
+    }
+  }
+}
+
+.OffFiltres {
+  animation: off 0.2s forwards;
+  @keyframes off {
+    from { 
+      height: 100px;
+      opacity: 1; 
+    }
+    to { 
+      height: 0;
+      opacity: 0; 
     }
   }
 }
@@ -214,3 +223,4 @@
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1) !important;
   }
 }
+
