--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -3,6 +3,8 @@ $green: #00ba7a;
 $green_medium: #019658;
 $blue: #2572dd;
 $blue_medium: #134fa3;
+$gray_1: #f3f4f5;
+$gray_2: #f0f0f0;;
 $gray_light: #ced6e0;
 $gray_medium: #a3a9af;
 $gray_dark: #57606f;
@@ -24,7 +26,8 @@ $col_red: #CF1327;
   --blue: #2572dd;
   --blue_medium: #134fa3;
   --gray_1: #f3f4f5;
-  --gray_2: #f0f0f0;;
+  --gray_2: #d7dbe0;;
+  --gray_3: #c7cbcf;;
   --gray_light: #ced6e0;
   --gray_medium: #a3a9af;
   --gray_dark: #57606f;
