Dev => Filters => Tags => part 4

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -22,8 +22,8 @@ $col_red: #CF1327;
 
 :root {
   --black: #20313f;
-  --green: #00ba7a;
-  --green_medium: #019658;
+  --green: #40C466;
+  --green_medium: rgb(56, 167, 87);
   --blue: #2572dd;
   --blue_medium: #134fa3;
   --gray_1: #ededee;
